--- a/dev/site/index.html
+++ b/dev/site/index.html
@@ -599,7 +599,7 @@
 <hr />
 <p>Website: <a href="https://whsn.whinyaan.xyz">whsn.whinyaan.xyz</a></p>
 <p>Github: <a href="https://github.com/whinee/whinesnips">github.com/whinee/whinesnips</a></p>
-<p>PyPi: <a href="https://pypi.org/project/wh-snips/">pypi.org/project/wh-snips</a></p>
+<p>PyPi: <a href="https://pypi.org/project/whinesnips/">pypi.org/project/whinesnips</a></p>
 <hr />
 <p>To be updated, be sure to watch this repository and join the <a href="https://discord.com/invite/JbAtUxGcJZ">Discord Support Server (!2)</a> for this and other projects.</p>
 <p>Interested in commissioning projects? Inquire through Discord(<a target="_blank" href="https://discord.com/users/848092597822160907">whinyaan</a>) or through e-mail(<a target="_blank" href="mailto:whinyaan@protonmail.com">whinyaan@protonmail.com</a>). Price starts at 30 USD.</p>
